--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@baidu/node-shared-cache": "^1.8.6",
     "isolated-vm": "^4.4.2",
     "yog-log": "^0.1.7"
   }
